CICO-41809 - Fix for Button alignment issue

--- a/zest_station/css/themes/chalet-view/theme.less
+++ b/zest_station/css/themes/chalet-view/theme.less
@@ -69,7 +69,7 @@
 			background-color: @white;
 			height: 145px;
 			.button {
-				top: auto !important;
+				top: 47.5px !important;
 			}
 		}
 
